Revert "[Blacklist] Fix blacklisted thumbnails on mobile in pool index"
This reverts commit 3741ce36e84c7ef53653fae523eb5eb7af757cfa.

--- a/app/javascript/src/styles/common/blacklists.scss
+++ b/app/javascript/src/styles/common/blacklists.scss
@@ -230,5 +230,5 @@ article.thumbnail.blacklisted {
     background-size: cover;
     background-position: center;
   }
-  img { visibility: hidden; }
+  img { display: none; }
 }
